# cgtoml

./: LICENSE  README.md  meson.build  meson_options.txt
lib/: meson.build
lib/cgtoml/: array.cpp  array.h  cgtoml.h  file.cpp  file.h  meson.build  private.h  table.cpp  table.h
test/: cgtoml.c  meson.build
test/files/: basic-table.toml
